--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
  <head>
   <title>RContributor Invoice Submission</title>
    
-  <link rel="shortcut icon" href="https://cdn.glitch.com/178c3435-2f9f-4642-bba7-d4764dfe44c2%2Frchain.ico?1535422931985">
+  <link rel="shortcut icon" href="images/rchain.ico">
    
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
